--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-  "livePreview.defaultPreviewPath": "/website/index.html",
+  "livePreview.defaultPreviewPath": "/docs/index.html",
   "liveServer.settings.port": 5501
 }
