feat: Add comprehensive Docker support and scripts for DDG Web Search
- Updated README.md with installation instructions for Docker and usage examples.
- Created docker-compose.dev.yml for development environment with hot-reload and test runner.
- Added docker-compose.prod.yml for production deployment with resource limits and monitoring.
- Introduced docker-compose.yml for default service configurations (stdio and HTTP transport).
- Implemented docker-publish-quick.sh for simplified Docker Hub publishing.
- Developed docker-publish.sh for automated building and publishing of Docker images.
- Added docker-start.sh for quick start of Docker services.
- Created docker-test.sh for testing Docker images and containers.
- Configured nginx.conf for reverse proxy and rate limiting.
- Updated package.json with Docker-related scripts for building, running, and publishing.

--- a/package.json
+++ b/package.json
@@ -27,7 +27,23 @@
     "mcp:build": "npm run build && node dist/mcp.js",
     "mcp:http": "npx ts-node src/mcp.ts --transport http",
     "mcp:http:build": "npm run build && node dist/mcp.js --transport http",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "docker:build": "docker build -t ddg-web-search .",
+    "docker:build:dev": "docker build -f Dockerfile.dev -t ddg-web-search:dev .",
+    "docker:run": "docker run -it ddg-web-search",
+    "docker:run:http": "docker run -p 3001:3001 ddg-web-search node dist/mcp.js --transport http --port 3001 --host 0.0.0.0",
+    "docker:run:cli": "docker run -it ddg-web-search node dist/cli.js interactive",
+    "docker:compose:http": "docker-compose --profile http up",
+    "docker:compose:stdio": "docker-compose --profile stdio up",
+    "docker:compose:cli": "docker-compose --profile cli up",
+    "docker:compose:dev": "docker-compose -f docker-compose.dev.yml up",
+    "docker:compose:test": "docker-compose -f docker-compose.dev.yml --profile test up ddg-test",
+    "docker:compose:down": "docker-compose down && docker-compose -f docker-compose.dev.yml down",
+    "docker:start": "./docker-start.sh",
+    "docker:test": "./docker-test.sh",
+    "docker:publish": "./docker-publish.sh",
+    "docker:publish:make": "make docker-publish",
+    "docker:publish:multiarch": "make docker-publish-multiarch"
   },
   "repository": {
     "type": "git",
