--- a/.dockerignore
+++ b/.dockerignore
@@ -4,7 +4,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-package-lock.json
+# Note: package-lock.json is needed for Docker builds
 yarn.lock
 pnpm-lock.yaml
 
@@ -102,7 +102,7 @@ temp
 
 # TypeScript
 *.tsbuildinfo
-tsconfig.json
+# tsconfig.json is needed for Docker builds, so we don't exclude it here
 
 # Jest
 jest.config.js
